<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CustomTransitionDrawables</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_repeat">Times to repeat</string>
    <string name="start_transition">Start Transition</string>
    <string name="reset_transition">Reset Transition</string>
    <string name="txt_layout_information">Some layout with parent having transition drawable as its background</string>
    <string name="hint_duration">Duration in miliseconds</string>
    <string name="reverse">Reverse Transition</string>

</resources>
