<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edt_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_duration"
        android:inputType="number"
        android:text="1000" >
    </EditText>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_transition" >
    </Button>

    <Button
        android:id="@+id/btn_reverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reverse" >
    </Button>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_transition" >
    </Button>

    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/some_drawable"
        android:padding="5dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_layout_information"
            android:textSize="24sp" >
        </TextView>
    </LinearLayout>

</LinearLayout>